Fix login button shift

--- a/src/components/LogInButton/LogInButton.css
+++ b/src/components/LogInButton/LogInButton.css
@@ -22,9 +22,8 @@
     background-color: var(--snow-storm-light);
   }
   &:active {
-    position: relative;
-    top: 5px;
-    left: 5px;
+    top: calc(1rem + 5px);
+    left: calc(1rem + 5px);
     box-shadow: none;
   }
 }
